<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_jobs"
            android:icon="@drawable/jobs"
            android:title="@string/menu_jobs" />
        <item
            android:id="@+id/nav_saved_jobs"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_saved_jobs" />
        <item
            android:id="@+id/nav_post_job"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_post_job" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_tips"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_news_posts"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_ai"
            android:icon="@drawable/ic_news_posts"
            android:title="@string/menu_aiServices" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/ic_news_posts"
            android:title="@string/menu_rewards" />

    </group>
</menu>